--- a/templates/blog/admin.html
+++ b/templates/blog/admin.html
@@ -3,7 +3,7 @@
 <div class="box">
   <h2 class="header">
     Personal Blog
-    <a href="/new.html" id="btn-add">+ Add</a>
+    <a href="/new" id="btn-add">+ Add</a>
   </h2>
   <ul class="article-list admin-list">
     <li>
