--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -3,9 +3,7 @@
 <div class="box">
   <h2>Personal Blog</h2>
   <ul class="article-list">
-    <li>
-      <a href="/article.html">My first article</a><span>August 7, 2024</span>
-    </li>
+    <li><a href="/article">My first article</a><span>August 7, 2024</span></li>
     <li><a href="#">Second article</a><span>August 4, 2024</span></li>
     <li><a href="#">Third article</a><span>August 1, 2024</span></li>
     <li><a href="#">Fourth article</a><span>July 30, 2024</span></li>
