--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,9 @@
 <nav class="navbar">
   <ul class="nav-left">
-    <li><a href="home.html">/Home</a></li>
-    <li><a href="admin.html">/Admin</a></li>
-    <li><a href="edit.html">/Edit</a></li>
-    <li><a href="new.html">/New</a></li>
+    <li><a href="/">/Home</a></li>
+    <li><a href="/admin">/Admin</a></li>
+    <li><a href="/edit">/Edit</a></li>
+    <li><a href="/new">/New</a></li>
   </ul>
   <ul class="nav-right">
     <li>
