--- a/templates/blog/article.html
+++ b/templates/blog/article.html
@@ -1,16 +1,9 @@
 {% extends 'base.html' %} {% load static %} {% block title %} Home {% endblock%}
 {% block css %} {% endblock %} {% block content %}
 <div class="box article-content">
-  <h2>My first article</h2>
-  <p class="date">August 7, 2024</p>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </p>
+  <h2>{{ article.title }}</h2>
+  <p class="date">{{ article.date|date:"M d, Y" }}</p>
+  <p>{{ article.get_content_as_html|safe }}</p>
 </div>
 
 {% endblock %} {% block scripts %} {% endblock %}
