--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -3,15 +3,12 @@
 <div class="box">
   <h2>Personal Blog</h2>
   <ul class="article-list">
-    <li><a href="/article">My first article</a><span>August 7, 2024</span></li>
-    <li><a href="#">Second article</a><span>August 4, 2024</span></li>
-    <li><a href="#">Third article</a><span>August 1, 2024</span></li>
-    <li><a href="#">Fourth article</a><span>July 30, 2024</span></li>
-    <li><a href="#">Fifth article</a><span>July 21, 2024</span></li>
-    <li><a href="#">Sixth article</a><span>July 15, 2024</span></li>
-    <li><a href="#">Seventh article</a><span>July 8, 2024</span></li>
-    <li><a href="#">Eighth article</a><span>July 4, 2024</span></li>
-    <li><a href="#">Nineth Article</a><span>July 1, 2024</span></li>
+    {% for article in articles %}
+    <li>
+      <a href="{% url 'article' id=article.id %}">{{ article.title }}</a
+      ><span>{{ article.date|date:'M d, Y' }}</span>
+    </li>
+    {% endfor %}
   </ul>
 </div>
 
