--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,9 @@
 <nav class="navbar">
   <ul class="nav-left">
     <li><a href="/">/Home</a></li>
+    {% if user.is_authenticated %}
+    <li><a href="/admin">/Admin</a></li>
+    {% endif %}
   </ul>
   <ul class="nav-right">
     <li>
