--- a/templates/blog/new.html
+++ b/templates/blog/new.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% load static %} {% block title %} Home {% endblock%}
 {% block css %} {% endblock %} {% block content %}
 <div class="box form-box">
-  <h2>New Article</h2>
+  <h2 class="header">New Article</h2>
 
   <form method="post">
     {% csrf_token %}
