--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -42,17 +42,10 @@ body {
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
 }
 
-h2,
-.form-box h2 {
+.header {
   font-size: 28px;
   color: var(--header-text-color);
   margin-bottom: 20px;
-}
-
-h3 {
-  font-size: 28px;
-  margin-bottom: 20px;
-  color: var(--header-text-color);
 }
 
 /* Стили для навигационного бара */
@@ -155,18 +148,6 @@ h3 {
   color: #777;
 }
 
-/* Стили для статьи */
-.article-content p {
-  font-size: 20px;
-  line-height: 1.8;
-  margin-bottom: 20px;
-  color: var(--main-text-color);
-}
-
-.article-content p.date {
-  color: var(--second-text-color);
-}
-
 /* Стили для формы */
 .form-box {
   display: flex;
@@ -220,20 +201,6 @@ h3 {
   border-color: #222;
 }
 
-#btn-add {
-  background-color: var(--main-bg-color);
-  color: #777;
-  font-weight: 700;
-  font-size: 20px;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-#btn-add:hover {
-  background-color: var(--main-bg-color);
-  color: #222;
-}
-
 #btn-lgn {
   background-color: var(--main-bg-color);
   color: #777;
@@ -246,50 +213,6 @@ h3 {
 #btn-lgn:hover {
   background-color: var(--main-bg-color);
   color: #222;
-}
-
-/* Стиль для страницы admin */
-#deleteBtn {
-  cursor: pointer;
-}
-
-/* Modal Styles */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-  overflow: auto;
-  padding-top: 60px;
-  transition: opacity 0.3s;
-}
-
-.modal-content {
-  width: 100%;
-  max-width: 400px;
-  border: 1px solid #ddd;
-  margin: 5% auto;
-  border-radius: 8px;
-}
-
-.close {
-  color: #aaa;
-  font-size: 32px;
-  font-weight: bold;
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  cursor: pointer;
-  transition: color 0.2s;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
 }
 
 .header {
