--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,7 @@
     <footer>{% include 'footer.html' %}</footer>
 
     <script src="{% static 'js/script.js' %}"></script>
-    {% block scripts %}
-    <!-- Можно добавить дополнительные скрипты -->
-    {% endblock %}
+    <script src="{% static 'js/utils.js' %}"></script>
+    {% block scripts %} {% endblock %}
   </body>
 </html>
