--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -15,5 +15,5 @@
 </div>
 
 {% include 'blog/login_modal.html' %} {% endblock %} {% block scripts %}
-<!-- scripts -->
+<script src="{% static 'js/login.js' %}"></script>
 {% endblock %}
