--- a/templates/blog/admin.html
+++ b/templates/blog/admin.html
@@ -34,4 +34,4 @@
   </div>
 </div>
 
-{% endblock %} {% block scripts %} {% endblock %}
+{% endblock %} {% block scripts %} <script src="{% static 'js/delete_article.js' %}"></script> {% endblock %}
